--- a/style.css
+++ b/style.css
@@ -12,7 +12,14 @@ body {
 #container {
     border: 1px solid red;
     width: 360px;
-    height:712px ;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto; 
+}
+
+#profile{
+    text-align: center;
+}
+
+#profile img{
+    width: 112px;
+
 }
