--- a/style.css
+++ b/style.css
@@ -1,25 +1,66 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    /*
-    background-image: url(./assets/bg-mobile.jpg);
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
-*/
     background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
 
 }
 
+body * {
+    font-family: 'Inter', sans-serif;
+    color: white;
+}
+
 #container {
-    border: 1px solid red;
     width: 360px;
-    margin: auto; 
+    margin: 56px; 
+ 
 }
 
 #profile{
     text-align: center;
+    padding: 24px;
 }
 
 #profile img{
     width: 112px;
+
+}
+
+#profile p {
+
+   font-weight: 500;
+   line-height: 24px;
+   margin-top: 8px;
+}
+
+/*Links*/
+ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    
+}
+
+ul li a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 16px 24px;
+
+    background: rgba(255, 255 , 255, 0.1);
+    border: 1px solid rgb(255, 255, 255, 0.5);
+    border-radius: 8px;
+
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+
+    text-decoration: none;
+    font-weight: 500px;
 
 }
