--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+:root{
+    --text-color: white;
+}
+
 body {
     background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
 
@@ -43,6 +47,7 @@ ul{
     display: flex;
     flex-direction: column;
     gap: 16px;
+    padding: 24px 0;
     
 }
 
@@ -74,10 +79,34 @@ ul li a:hover {
 }
 
 /*ocial*/
-#ocial-links
+#social-links
 {
     display: flex;
-    gap: 16px;
+    justify-content: center;
 
     padding: 24px 0px;
+
+    font-size: 24px;
+}
+
+#social-links a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    transition: background 0.2s;
+    border-radius: 50%;
+
+
+}
+
+#social-links a:hover {
+    background: rgb(255, 255, 255, 0.2);
+
+}
+
+footer{
+    padding: 24px;
+    text-align: center;
+    font-size: 14px;
 }
