--- a/style.css
+++ b/style.css
@@ -68,6 +68,11 @@ body * {
 }
 
 /*switch*/
+#switch{
+    position: relative;
+    width: 64px;
+    margin: 4px auto;
+}
 
 #switch button{
     width: 32px;
@@ -76,6 +81,18 @@ body * {
     border: 0;
     border-radius: 50%;
     background-image: var(--logo-switch);
+
+    position: absolute;
+    z-index: 1;
+    transform: translateY(-50%);
+    top: 50%;
+    left: 0;
+}
+
+.dark #switch button
+{
+    right: 0;
+    left: initial;
 
 }
 
@@ -86,7 +103,7 @@ body * {
     background: var(--surface);
     border: 1px solid var(--stroke-color);
     -webkit-backdrop-filter: blur(4px);
-    border-radius: 9999px;
+    border-radius: 9999px;v 
 
 }
 
