--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body * {
     background: var(--surface);
     border: 1px solid var(--stroke-color);
     -webkit-backdrop-filter: blur(4px);
-    border-radius: 9999px;v 
+    border-radius: 9999px; 
 
 }
 
