--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -33,7 +33,7 @@
 
 body {
     background: var(--bg-url) no-repeat top center/cover;
-
+    height: 100vh;
 
 }
 
@@ -45,8 +45,10 @@ body * {
 /*profile*/
 
 #container {
-    width: 360px;
-    margin: 56px; 
+    width: 100%;
+    max-width: 588px;
+    margin: 56px auto 0px;
+    padding: 0 24px;
  
 }
 
