--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    
 }
 /*light mode*/
 :root{
@@ -56,6 +56,7 @@
 body {
     background-color: var(--back-color);
     height: 100vh;
+    overflow: hidden;
 
 }
 
@@ -63,6 +64,7 @@ body * {
     font-family: 'Inter', sans-serif;
     color: var(--text-color);
     position: relative;
+
 
 }
 
@@ -84,7 +86,7 @@ body * {
     position: relative;
 }
 
-#profile img{
+#profile img {
     width: 112px;
 
 }
@@ -97,13 +99,13 @@ body * {
 }
 
 /*switch*/
-#switch{
+#switch {
     position: relative;
     width: 64px;
     margin: 4px auto;
 }
 
-#switch button{
+#switch button {
     width: 32px;
     height: 32px;
     background: white var(--logo-switch) no-repeat center;
@@ -120,7 +122,7 @@ body * {
 
 }
 
-#switch button:hover{
+#switch button:hover {
     outline: 8px solid var(--highlight-color);
 }
 
@@ -139,7 +141,6 @@ body * {
     -webkit-backdrop-filter: blur(4px);
     border-radius: 9999px; 
     backdrop-filter: blur(4px);
-
 }
 
 /*Links*/
@@ -222,8 +223,9 @@ ul li a ion-icon {
 }
 
 #social-links a ion-icon {
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
+    text-shadow: 6px 2px 5px rgba(0, 0, 0, 0.5);
+    padding: 5px;
+    
 
 
 }
